# nava-real-estate-management

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  MASTER_SPEC.md  README.md  STRATEGY.md  alembic.ini  data.csv  docker-compose.yml  main.py  pyproject.toml  setup.sh
.claude/: settings.json
alembic/: env.py
alembic/versions/: 0001_initial.py  0235ff20694c_add_token_columns_to_agent_decisions.py  6986d454bbf2_add_briefings_table.py  a0ca1df0dc7e_add_processing_status.py
app/: config.py  database.py  logging_config.py  main.py  seed.py
app/models/: __init__.py  admin_feedback.py  agent_decision.py  briefing.py  enums.py  message.py  outbound_reply.py  thread.py  thread_message.py  voice_session.py
app/routers/: admin.py  decisions.py  feedback.py  replies.py  threads.py  voice.py  webhooks.py
app/schemas/: decisions.py  feedback.py  replies.py  threads.py  voice.py  webhooks.py
app/services/: agent.py  costs.py  embeddings.py  feedback.py  ingestion.py  tools.py  voice.py
app/tasks/: agent_runner.py
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: spinner.tsx  tooltip.tsx
frontend/src/hooks/: useThreads.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: AnalyticsPage.tsx  QueuePage.tsx  ThreadPage.tsx
scripts/: reset-db-docker.sh  reset-db.sh
tests/: conftest.py  test_agent.py  test_feedback.py  test_health.py  test_ingestion.py  test_models.py  test_threads.py  test_tools.py  test_voice.py  test_webhooks.py
